# HPGO

./: .clang-format  .dir-locals.el  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  Cargo.toml  HPGO-config.cmake  HPGO.cc  HPGO.h  HPGO.tex  LICENSE  README.md  README.org  azure-pipelines.yml  block.cc  block.h  device.h  duration.cc  duration.h  graph.cc  graph.h  helper.cc  helper.h  model.cc  model.h  orchestration.cc  orchestration.h  pipeline.cc  pipeline.h  renovate.json  syncpipeline.cc  syncpipeline.h  test-PEC.cc  test-orchestrate.cc  test_python.cc
.github/workflows/: rust.yml
HPGO/: CMakeLists.txt  HPGO.cc  HPGO.h  config.h
HPGO/environment/: device.cc  device.h  network.h  nvlink.cc  nvlink.h
HPGO/include/baselib/: baselib.h
HPGO/include/fiblib/: CTFibonacci.h  CTFibonacci.inl  Fibonacci.h
HPGO/input/: graph.cc  graph.h
HPGO/model/: model.cc  model.h
HPGO/orchestration/: orchestration-hierarchical.cc  orchestration.cc  orchestration.h
HPGO/parallelism/data-parallel/: data-parallel.cc  data-parallel.h
HPGO/parallelism/pipeline/: block.h  duration.cc  duration.h  pipeline.cc  syncpipeline.cc  syncpipeline.h
HPGO/parallelism/split-concat/: split-concat.cc  split-concat.h
HPGO/source/: baselib.cpp
HPGO/utils/: helper.h
auto/: HPGO.el
ci/: .gitlab-ci.yml  azure-pipelines.yml  dev-version-rev.sh  rust-doc.gitlab-ci.yml  sourcehut.yml
cmake/: CompileOptions.cmake  GenerateTemplateExportHeader.cmake
cmd/: CMakeLists.txt  main.cpp
contrib/: analysis_dapple.py  torch_graph.py
contrib/pipedream/graph/: graph.py
contrib/torchgpipe/: blockpartition.py
contrib/utils/: __init__.py  prepare.py
deploy/ubuntu-ppa/debian/: rules
docs/: CMakeLists.txt
docs/api-docs/: doxyfile.in
docs/images/: HPGO-Pipeline.png.old
docs/manual/: CMakeLists.txt  HPGO.fdb_latexmk  HPGO.fls  HPGO.tex
docs/manual/auto/: HPGO.el  HPGO.tex.el
docs/presentation/: CMakeLists.txt  HPGO.md
docs/report/: HPGO.org  HPGO.tex
docs/report/auto/: HPGO.el
environment/: device.cc  device.h  network.cc  network.h  nvlink.cc  nvlink.h
examples/: amoebanet_scalability.rs  amoebanet_speedup.rs  bert_scalability.rs  bert_speedup.rs  gnmt_scalability.rs  gnmt_speedup.rs  hlo_pruning.rs  hlo_pruning_nosharing.rs  hlo_to_dot.rs  model_speedup.rs  vgg19_speedup.rs  vs_pipedream.rs  xlnet_scalability.rs  xlnet_speedup.rs
graph/: graph.py
input/: graph.cc
model/: model.cc  model.h
optimizer/: optimizer_graph_HPGO.py  optimizer_graph_hierarchical.py
orchestration/: orchestration.cc  orchestration.h
parallelism/data-parallel/: data-parallel.cc  data-parallel.h
parallelism/pipeline/: syncpipeline.h
parallelism/split-concat/: split-concat.cc  split-concat.h
profiler/image_classification/profiles/amoebanet/: flattened.txt
profiler/image_classification/profiles/ggv/: graph.txt
profiler/translation/profiles/bert_large/: graph.txt
profiler/translation/profiles/xlnet/: graph.txt
profiles/amb_issue_minimal/: graph.txt
profiles/amoebanet/: amoeba18.txt  graph.txt  perf.txt
profiles/amoebanet_18/: graph.txt
profiles/amoebanet_36/: graph.txt
profiles/bert_48/: graph.txt
profiles/bert_large/: graph.txt
profiles/gnmt_32/: graph.txt
profiles/gnmt_32_simplified/: graph.txt
profiles/xlnet/: xlnet-36.txt
scripts/FPL/: AnalyticalErrBound.py  Arrangement.py  FPL.py
scripts/google-cloud-build/: Dockerfile  build-release.sh  build-test.sh  build.sh  cloudbuild-example.yaml  cloudbuild-release.yaml  cloudbuild-test.yaml  cloudbuild.yaml
scripts/gpipe-balance/: balance.py
scripts/graph-visualizer/: test-prepare.py  visualize.py
src/: lib.rs  main.rs  pylib.rs  xlnet_speedup.rs
src/analysis/: cc_overlap.rs  mod.rs
src/api/: mod.rs  pylib.rs
src/api/py/: mod.rs  py_ir.rs  py_layerwise.rs  py_utils.rs
src/environment/: device.rs  ethernet.rs  mod.rs  network.rs  nvlink.rs
src/input/: hlo_string.rs  mod.rs  prepare_py.rs  tensorflow_timeline.rs  torch_graph.rs  torch_graph_py.rs
src/input/hlo_parser/: go.mod  go.sum  main.go
src/ir/: conductor.rs  derive.rs  error.rs  hlo_ast.rs  mod.rs  ungraph.rs
src/ir/derive/: derivation.rs  derive_impl.rs  mod.rs
src/ir/propagate/: ast_propagate.rs  fusion.rs  graph_propagate.rs  mod.rs  propagate.rs  vargraph.rs
src/ir/prune/: mod.rs  param_priority.rs
src/layerwise/: conductor.rs  mod.rs
src/layerwise/analysis/: cc_overlap.rs  gpu_memory.rs
src/layerwise/model/: model.rs  model_perf.rs
src/layerwise/orchestration/: orchestrate_async.rs  orchestrate_hierarchical.rs  orchestrate_sync.rs
src/layerwise/parallelism/: data_parallel.rs  gpipe.rs  gradient_accumulation.rs  split_concat.rs  sync_pipeline.rs
src/model/: mod.rs  model.rs  model_perf.rs
src/orchestration/: mod.rs  orchestrate.rs  orchestrate_async.rs  orchestrate_hierarchical.rs  orchestrate_sync.rs
src/parallelism/: data_parallel.rs  gradient_accumulation.rs  mod.rs  split_concat.rs  sync_pipeline.rs
src/parallelism/data-parallel/: data-parallel.rs
tests/: CMakeLists.txt  data_parallel_test.rs  device_test.rs  ga_test.rs  gpu_memory_test.rs  hlo_test.rs  input_test.rs  orchestrate_hierarchical_test.rs  orchestrate_test.rs  p3_test.rs  pyapi_test.py  speedup_test.rs  split_concat_test.rs  test_PEC.cc  test_config.h  test_device.cc  test_dp.cc  test_graph.cc  test_helper.cc  test_model.cc  test_orchestrate.cc  test_orchestrate_full.cc  test_orchestrate_manual.cc  test_pd.cc  torch_graph_test.rs
tests/HPGO-test/: CMakeLists.txt  test_PEC.cc  test_amb_issue.cc  test_dataparallel.cc  test_device.cc  test_graph.cc  test_helper.cc  test_model.cc  test_orchestrate_full.cc  test_orchestrate_manual.cc  test_pd.cc  test_self_contained.cc  test_splitconcat.cc
utils/: helper.cc  helper.h  prepare.py
