[package]
name = "HPGO"
version = "0.9.0"
license = "Apache-2.0"
authors = ["Yi Rong <i@rongyi.io>"]
description = "Hybrid Parallelism Global Orchestration"
repository = "https://github.com/LER0ever/HPGO"
exclude = [
    "examples/*"
]

[lib]
name = "HPGO"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "HPGO-CMD"
path = "src/main.rs"

[dependencies]
docopt = "1"
itertools = "0.7.8"
serde = { version = "1.0.70", features = ["derive"] }
csv = "1.0.0"
ordered-float = "0.5.0"
float-cmp = "0.5.2"
strsim = "0.9.1"
ndarray = "0.13.0"
pyo3 = { version = "0.8.2" }
numpy = { version = "0.7.0", optional = true }

[dev-dependencies]
rustlearn = "0.5.0"
bencher = "0.1.5"