[package]
name = "HPGO"
version = "0.9.3-dev"
license = "BSD-3-Clause"
authors = ["Yi Rong <hi@rongyi.io>"]
description = "Hybrid Parallelism Global Orchestration"
repository = "https://github.com/LER0ever/HPGO"
edition = "2018"
exclude = [
    "contrib/*"
]

[lib]
name = "HPGO"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "HPGO-CMD"
path = "src/main.rs"

[dependencies]
structopt = "0.3"
itertools = "0.9.0"
rayon = "1.3"
ansi_term = "0.12"
prettytable-rs = "0.8"
ordered-float = "1.0"
serde = "1.0"
serde_json = "1.0"
pest = "2.1.3"
log = "0.4"
fern = "0.5"

[dependencies.pyo3]
version = "0.8.5"
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
criterion = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"

[package.metadata.maturin]
requires-dist = ["graphviz~=0.13"]
